# abTEM

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  Dockerfile  MANIFEST.in  README.html  README.md  RELEASING_GUIDE.md  TODO.txt  Untitled.html  genindex.html  install.html  intro.html  markdown-notebooks.html  markdown.html  mypy.ini  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_commensurate.py  test_commensurate_extended.py  test_commensurate_lattices.py  tox.ini
.devcontainer/rocm6.4.4_ubuntu24.04_py3.12/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  python-app.yml  python-publish.yml  release.yml  tests.yml
_downloads/14678406c81a5753dec1a6748ad74a10/: abtem.bib
_modules/: index.html
_modules/abtem/: atoms.html  charge_density.html  detectors.html  distributions.html  gpaw.html  measurements.html  multislice.html  potentials.html  scan.html  transfer.html  visualize.html  waves.html
_sources/: README.md  Untitled.ipynb  install.md  intro.md  markdown-notebooks.ipynb
_sources/abtem/: changelog.md  cite.md  citing.md  contact.md  contribute.md  contributing.md
_sources/getting_started/: basics-Copy1.ipynb  basics.md  install.md  overview.md
_sources/reference/: config.md
_sources/user_guide/: atomic_models.ipynb  bibliography.md
_static/: basic.css  documentation_options.js
_templates/: custom-class-template.html
_templates/autosummary/: module.html
abtem/: .gitignore  __init__.py  _version.py  analyse.py  antialias.py  aperture.py  array.py  atoms.py  axes_grid.py  base_classes.py  bases.py  bokeh_plot.py  changelog.html  charge_density.py  cite.html  citing.html  config.py  contact.html  contribute.html  contributing.html  cpu_kernels.py  cuda_kernels.py  cudakernels.py  detect.py  detectors.py  device.py  device_func.py  dft.py  distributions.py  fft.py  fields.py  finite_difference.py  gpaw.py  graph.py  indexing.py  integrals.py  interact.py  interactive.py  interpolate.py  interpolation.py  (+32 more)
abtem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
abtem/basic/: __init__.py  antialias.py  axes.py  backend.py  complex.py  cuda.py  dask.py  energy.py  event.py  fft.py  grid.py  utils.py
abtem/bloch/: __init__.py  bloch.py  dynamical.py  indexing.py  matrix_exponential.py  utils.py
abtem/core/: __init__.py  _cuda.py  abtem.yaml  antialias.py  array.py  axes.py  axes_new.py  backend.py  blockwise.py  chunks.py  colors.py  complex.py  config.py  constants.py  cuda.py  dask.py  device.py  diagnostics.py  dispatch.py  distributions.py  electron_configurations.py  energy.py  ensemble.py  events.py  fft.py  fftw.py  grid.py  indexing.py  interpolate.py  intialize.py  torch.py  transform.py  units.py  utils.py
abtem/data/: electron_configurations.txt  kirkland.txt  lobato.txt
abtem/inelastic/: core_loss.py  phonons.py  plasmons.py
abtem/integrals/: __init__.py  base.py  gaussians.py  infinite.py  quadrature.py
abtem/ionization/: __init__.py  detect.py  electron_configurations.py  multislice.py  transitions.py  utils.py
abtem/learn/: analyse.py  augment.py  augment_old.py  calibrate.py  dataset.py  evaluate.py  filters.py  fit.py  model.py  partialconv2d.py  postprocess.py  potential.py  preprocess.py  r2unet.py  random.py  randomize.py  scale.py  snippets.py  structures.py  template.py  unet.py  unet_old.py  utils.py  visualize.py
abtem/magnetism/: gpaw.py  iam.py  parametrization.py  pauli.py  real_space_multislice.py  realspace_multislice.py  utils.py
abtem/measure/: __init__.py  detect.py  indexing.py  lt.py  measure.py  mtf.py  noise.py  old_measure.py  reconstruct.py  thickness.py  utils.py
abtem/measurements/: __init__.py  core.py  detectors.py  indexing.py  lt.py  utils.py
abtem/parametrizations/: __init__.py  base.py  ewald.py  kirkland.py  lobato.py  peng.py
abtem/potentials/: __init__.py  _poisson.py  atom.py  base.py  charge_density.py  crystal.py  finite.py  gpaw.py  iam.py  infinite.py  parametrizations.py  plasmons.py  poisson.py  potentials.py  project.py  temperature.py  utils.py
abtem/prism/: __init__.py  _natural_neighbors.py  _partitioned_s_matrix.py  bloch.py  partitioned_s_matrix.py  s_matrix.py  utils.py
abtem/reconstruct/: epie.py
abtem/structures/: __init__.py  (+7 more)
articles/: README.md
benchmarks/: benchmark_comparison.py  benchmark_potential_chunking.py  compare_benchmarks.py  diagnose_scan_vram.py  profile_scan_detailed.py  profile_scan_memory.py
binder/: environment.yml  requirements.txt
docs/: _config.yml  _toc.yml  doc_requirements.txt  intro.md  references.bib
examples/: 1_million_probe_positions.ipynb  SAED_pattern_with_TDS.ipynb  SAED_with_TDS.ipynb  basic_4d-stem_simulation.ipynb  basic_hrtem_and_saed.ipynb  basic_hrtem_image.ipynb  cbed_8_million_atoms.ipynb  examples.md  hrtem_with_dft_potential.ipynb  index.ipynb  materials_project.ipynb  pacbed_thickness_series.ipynb
getting_started/: basics-Copy1.html  basics.html  install.html  overview.html
old_tests/: conftest.py  test_detect.py  test_dft.py  test_energy.py  test_grid.py  test_potential_parametrization.py  test_prism.py  test_scan.py
reference/: config.html
test/: conftest.py  simplest_example_of_SMatrix_error.py  strats.py  test_antialias.py  test_array.py  test_array_with_grid_and_energy.py  test_atomic_potential.py  test_bloch_indexing.py  test_bloch_waves.py  test_cache.py  test_charge_density.py  test_copy.py  test_ctf.py  test_detect.py  test_dft.py  test_dft_potentials.py  test_distributions.py  test_eels.py  test_energy.py  test_energy_ensemble.py  test_ensemble.py  test_event.py  test_ewald.py  test_export.py  test_finite_potentials.py  test_gpaw.py  test_grid.py  test_gridproperty.py  test_hrtem.py  test_hyperspy.py  test_interpolate.py  test_kirkland.py  test_magnetics.py  test_magnetism.py  test_measure.py  test_mtf.py  test_noise.py  test_observing.py  test_potential_chunking.py  test_potential_integration.py  (+19 more)
user_guide/: atomic_models.html  bibliography.html
(+886 files in other folders)
