[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
fix = false
line-length = 88
exclude = [
    "abtem/reconstruct.py",
    "test",
    "*ipynb",
]

[tool.ruff.lint]
select = [
    "I",
    "E",
    "F",
    "W",
    "F821",
    #"ANN001",  # Missing type annotation for function argument
    #"ANN002",  # Missing type annotation for function return
    #"ANN003",  # Missing type annotation for variable
]
ignore = ["E741", "E743"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Overspecified grid, the provided sampling:UserWarning",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore:Axis.*not supported by hyperspy.*:UserWarning",
    "ignore:'num_frozen_phonons' is greater than one, but the potential unit does not have frozen phonons:UserWarning",
    "ignore:ignoring keyword argument 'read_only':UserWarning",
]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
