[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "abTEM"
authors = [{name = "abTEM developers", email = "toma.susi@univie.ac.at"}]
description = "*ab*TEM: transmission electron microscopy from first principles"
readme = "README.md"
urls = {Homepage = "https://github.com/abtem/abtem"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
license = "GPL-3.0-or-later"
license-files = ["LICENCE"]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib>=3.6",
    "pyfftw",
    "scipy",
    "numba",
    "dask>=2022.12.1,!=2025.12.*,!=2026.1.*",
    "distributed",
    "zarr",
    "ase",
    "threadpoolctl",
    "tabulate",
    "ipywidgets",
    "ipympl",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "tox",
    "hypothesis",
    "jupyter-client",
    "deepdiff",
    "imageio",
]
docs = [
    "jupyter-book",
    "sphinx_autodoc_typehints",
]
gpu = ["cupy"] # You may need to replace this with the correct CUDA toolkit version, e.g. cupy-cuda13x!
extra = [
    "pandas",
    "ipycytoscape",
    "dask-labextension",
    "bokeh",
]
dev = [
    "types-PyYAML",
    "types-tqdm",
    "black",
    "isort",
    "ruff",
    "mypy",
    "jupyterlab_code_formatter",
    "pre-commit",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
abtem = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "abtem._version.__version__"}

[tool.black]
line-length = 88

[tool.ruff]
fix = false
line-length = 88
exclude = [
    "abtem/reconstruct.py",
    "test",
    "*ipynb",
]

[tool.ruff.lint]
select = [
    "I",
    "E",
    "F",
    "W",
    "F821",
    #"ANN001",  # Missing type annotation for function argument
    #"ANN002",  # Missing type annotation for function return
    #"ANN003",  # Missing type annotation for variable
]
ignore = ["E741", "E743"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Overspecified grid, the provided sampling:UserWarning",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore:Axis.*not supported by hyperspy.*:UserWarning",
    "ignore:'num_frozen_phonons' is greater than one, but the potential unit does not have frozen phonons:UserWarning",
    "ignore:ignoring keyword argument 'read_only':UserWarning",
    "ignore:Passing storage-related arguments:FutureWarning"
]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
