[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "abTEM"
authors = [{name = "abTEM developers", email = "toma.susi@univie.ac.at"}]
description = "*ab*TEM: transmission electron microscopy from first principles"
readme = "README.md"
urls = {Homepage = "https://github.com/abtem/abtem"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
license = "GPL-3.0-or-later"
license-files = ["LICENCE"]

dependencies = [
    "numpy >= 2.0.0",
    "pandas",
    "matplotlib>=3.6",
    "pyfftw",
    "scipy",
    "numba",
    "dask>=2022.12.1,!=2025.12.*,!=2026.1.*",
    "distributed",
    "zarr",
    "ase",
    "threadpoolctl",
    "tabulate",
    "ipywidgets",
    "ipympl",
    "tqdm",
    "rich", # Required for supporting Zarr zip storage
]
dynamic = ["version"]

[project.optional-dependencies]
extra = [
    "pandas",
    "ipycytoscape",
    "dask-labextension",
    "bokeh",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "jupyterlab-code-formatter>=3.0.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-tqdm>=4.67.2.20260202",
]
docs = [
    "jupyter-book>=2.1.2",
    "sphinx-autodoc-typehints>=3.6.1",
]
test = [
    "deepdiff>=8.6.1",
    "hypothesis>=6.151.5",
    "imageio>=2.37.2",
    "jupyter-client>=8.8.0",
    "py>=1.11.0",
    "pytest-cov>=7.0.0",
    "tox>=4.34.1",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
abtem = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "abtem._version.__version__"}

[tool.black]
line-length = 88

[tool.ruff]
fix = false
line-length = 88
exclude = [
    "abtem/reconstruct.py",
    "test",
    "*ipynb",
]

[tool.ruff.lint]
select = [
    "I",
    "E",
    "F",
    "W",
    "F821",
    #"ANN001",  # Missing type annotation for function argument
    #"ANN002",  # Missing type annotation for function return
    #"ANN003",  # Missing type annotation for variable
]
ignore = ["E741", "E743"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:Overspecified grid, the provided sampling:UserWarning",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore:Axis.*not supported by hyperspy.*:UserWarning",
    "ignore:'num_frozen_phonons' is greater than one, but the potential unit does not have frozen phonons:UserWarning",
    "ignore:ignoring keyword argument 'read_only':UserWarning",
    "ignore:Passing storage-related arguments:FutureWarning"
]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
