[metadata]
name = abtem
author = abTEM developers
url = https://github.com/abtem/abtem
author_email = jacob.madsen@univie.ac.at
license = GPL
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    pyfftw
    scipy
    numba
    dask
    zarr
    matplotlib
    ase
    jupyter
    tabulate
    cplot
    threadpoolctl

[options.extras_require]
testing =
    pytest
    hypothesis
    jupyter-client
    deepdiff

docs =
    jupyter-book
    sphinx_autodoc_typehints

gpu =
    cupy