[metadata]
name = abtem
version = attr: abtem._version.__version__
author = abTEM developers
url = https://github.com/abtem/abtem
author_email = jacob.madsen@univie.ac.at
license = GPL
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy<2
    pandas
    matplotlib>=3.6
    pyfftw
    scipy
    numba
    dask>=2022.12.1
    distributed
    zarr<3
    ase
    threadpoolctl
    tabulate
    ipywidgets
    ipympl
    tqdm

[options.package_data]
abtem = py.typed

[options.extras_require]
testing =
    pytest
    tox
    hypothesis
    jupyter-client
    deepdiff
    imageio

docs =
    jupyter-book
    sphinx_autodoc_typehints

gpu =
    cupy

extra =
    pandas
    ipycytoscape
    dask-labextension
    bokeh

dev =
    types-PyYAML
    types-tqdm
    black
    isort
    ruff
    mypy
    jupyterlab_code_formatter
    pre-commit

[tool:pytest]
minversion = 6.0
addopts = -ra -q
